--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ package-mode = false
 [tool.poetry.dependencies]
 python = ">=3.13"
 quart = ">=0.20.0,<0.21.0"
+pydantic-settings = "^2.10.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
