--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ package-mode = false
 python = ">=3.13"
 quart = ">=0.20.0,<0.21.0"
 pydantic-settings = "^2.10.1"
+quart-schema = "^0.22.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
