--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = ">=3.13"
 quart = ">=0.20.0,<0.21.0"
 pydantic-settings = "^2.10.1"
 quart-schema = "^0.22.0"
+sqlalchemy = "^2.0.42"
+aiomysql = "^0.2.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
