--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "budgeting-app"
+name = "app"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -13,6 +13,11 @@ pydantic-settings = "^2.10.1"
 quart-schema = "^0.22.0"
 sqlalchemy = "^2.0.42"
 aiomysql = "^0.2.0"
+argon2-cffi = "^25.1.0"
+
+[tool.poetry.scripts]
+app = "app.main:run"
+initdb = "init_db:run"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
