--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ quart-schema = "^0.22.0"
 sqlalchemy = "^2.0.42"
 aiomysql = "^0.2.0"
 argon2-cffi = "^25.1.0"
+pyjwt = "^2.10.1"
 
 [tool.poetry.scripts]
 app = "app.main:run"
