--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.13"
+python = ">=3.12,<3.13"
 quart = ">=0.20.0,<0.21.0"
 pydantic-settings = "^2.10.1"
 quart-schema = "^0.22.0"
