--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,11 @@ pyjwt = "^2.10.1"
 app = "app.main:run"
 initdb = "init_db:run"
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.12.9"
+black = "^25.1.0"
+mypy = "^1.17.1"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
