--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.12.9
     hooks:
-      - id: ruff
+      - id: ruff-check
 
   - repo: https://github.com/psf/black
     rev: 25.1.0
