--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ black = "^25.1.0"
 mypy = "^1.17.1"
 pre-commit = "^4.3.0"
 
+[tool.mypy]
+plugins = ["pydantic.mypy"]
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
