--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ ruff = "^0.12.9"
 black = "^25.1.0"
 mypy = "^1.17.1"
 pre-commit = "^4.3.0"
+pytest = "^8.4.1"
+pytest-asyncio = "^1.1.0"
 
 [tool.mypy]
 plugins = ["pydantic.mypy"]
