config and smoke test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ pytest-asyncio = "^1.1.0"
 [tool.mypy]
 plugins = ["pydantic.mypy"]
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+asyncio_mode = "auto"
+addopts = "-q -ra"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
