Setup Unit Testing & Actions & Pre-Push Hook
* pytest deps

* config and smoke test

* fix for running tests

* test balance

* remove sanity test

* test structure and name

* GitHub Action for testing

* pre-commit hook to run tests before push

* lint

---------

Co-authored-by: Etay Schwartzberg <etay.schwartzberg@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,16 @@ ruff = "^0.12.9"
 black = "^25.1.0"
 mypy = "^1.17.1"
 pre-commit = "^4.3.0"
+pytest = "^8.4.1"
+pytest-asyncio = "^1.1.0"
 
 [tool.mypy]
 plugins = ["pydantic.mypy"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+asyncio_mode = "auto"
+addopts = "-q -ra"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
